plugins {
    id 'java'
    id 'application'
    id 'org.openjfx.javafxplugin' version '0.0.9'
}

group 'org.example'
version '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

java {
    sourceCompatibility = JavaVersion.VERSION_1_9
    targetCompatibility = JavaVersion.VERSION_1_9
}

sourceSets {
    main.java.srcDirs = ['src/main/java']
    // include css files in the project's compiled resources
    main {
        resources {
            srcDirs = ["src/main/java"]
            includes = ["**/*.css"]
        }
    }
}

dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile 'com.jfoenix:jfoenix:9.0.10'
}

javafx {
    version = "15.0.1"
    modules = ['javafx.controls', 'javafx.graphics']
}


run {
    mainClassName = 'com.jfxbase/com.jfxbase.sample.Main'
    applicationDefaultJvmArgs += [
            "--add-opens", "javafx.graphics/javafx.css=ALL-UNNAMED",
            "--add-opens", "javafx.base/com.sun.javafx.runtime=ALL-UNNAMED",
            "--add-opens", "javafx.controls/com.sun.javafx.scene.control.behavior=ALL-UNNAMED",
            "--add-opens", "javafx.controls/com.sun.javafx.scene.control=ALL-UNNAMED",
            "--add-opens", "javafx.base/com.sun.javafx.binding=ALL-UNNAMED",
            "--add-opens", "javafx.base/com.sun.javafx.event=ALL-UNNAMED",
            "--add-opens", "javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED",
            "--add-opens", "javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED",
            "--add-exports", "javafx.controls/com.sun.javafx.scene.control.behavior=com.jfoenix",
            "--add-exports", "javafx.controls/com.sun.javafx.scene.control=com.jfoenix",
            "--add-exports", "javafx.base/com.sun.javafx.binding=com.jfoenix",
            "--add-exports", "javafx.base/com.sun.javafx.event=com.jfoenix",
            "--add-exports", "javafx.graphics/com.sun.javafx.stage=com.jfoenix",
            "--add-exports", "javafx.graphics/com.sun.javafx.scene=com.jfoenix",
            "--add-exports", "javafx.graphics/com.sun.javafx.scene.text=com.jfoenix",
            "--add-exports", "javafx.graphics/com.sun.javafx.geom=com.jfoenix",
            "--add-exports", "javafx.graphics/com.sun.javafx.util=com.jfoenix",
            "--add-exports", "javafx.graphics/com.sun.javafx.scene.traversal=com.jfoenix"
    ]
}

